--- a/Front-end/package.json
+++ b/Front-end/package.json
@@ -10,17 +10,21 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "@types/react": "^18.0.9",
+    "@types/react-dom": "^18.0.4",
     "ansi-regex": "^6.0.1",
     "axios": "^0.26.1",
     "bootstrap": "^4.5.2",
     "html-react-parser": "^0.14.0",
     "jquery": "^3.5.1",
     "popper.js": "^1.16.1",
-    "react": "^16.13.1",
+    "react": "^16.14.0",
     "react-bootstrap": "^1.3.0",
-    "react-dom": "^16.13.1",
+    "react-dom": "^16.14.0",
     "react-google-login": "^5.2.2",
     "react-loader-spinner": "^3.1.14",
+    "react-modal": "^3.15.1",
+    "react-modal-video": "^1.2.8",
     "react-player": "^2.6.2",
     "react-rating-stars-component": "^2.2.0",
     "react-redux": "^7.2.4",
@@ -28,7 +32,10 @@
     "react-scripts": "3.4.3",
     "redux": "^4.1.0",
     "redux-thunk": "^2.3.0",
-    "socket.io-client": "^4.1.1"
+    "sass": "^1.51.0",
+    "socket.io-client": "^4.1.1",
+    "sweetalert": "^2.1.2",
+    "typescript": "^4.6.4"
   },
   "scripts": {
     "start": "react-scripts start",
